--- a/config/database.yml
+++ b/config/database.yml
@@ -81,4 +81,4 @@ production:
   <<: *default
   database: budget_production
   username: budget
-  password: <%= ENV["BUDGET_DATABASE_PASSWORD"] %>
+  password: <%= ENV["DATABASE_URL"] %>
